fix : 구분자로 시작 시 예외도 추가